Added a SQLite Database and enabled the Main View as well as the Add and Edit entry activities to retrieve their data from the database

--- a/app/src/main/res/layout/edit_entry_activity.xml
+++ b/app/src/main/res/layout/edit_entry_activity.xml
@@ -22,7 +22,7 @@
         android:paddingLeft="12dp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
-        android:hint="Title"
+        android:text="Title"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
         android:layout_marginRight="32dp"
         android:background="@color/white"
         android:ems="10"
-        android:hint="Store"
+        android:text="Store"
         android:inputType="text"
         android:paddingLeft="12dp"
         android:paddingTop="8dp"
@@ -82,7 +82,7 @@
         android:paddingLeft="12dp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
-        android:hint="Value"
+        android:text="Value"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -115,21 +115,21 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
-        android:background="@color/white"
         android:ems="10"
-        android:hint="Date"
         android:inputType="date"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner"
+        android:text="Date"
+        android:background="@color/white"
         android:paddingLeft="12dp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner" />
+        android:textSize="20sp" />
 
     <Button
-        android:id="@+id/pickDate"
+        android:id="@+id/pickDateEdit"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
@@ -156,7 +156,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editDate"
-        android:hint="Time"
+        android:text="Time"
         android:background="@color/white"
         android:paddingLeft="12dp"
         android:paddingTop="8dp"
@@ -165,7 +165,7 @@
         android:textSize="20sp" />
 
     <Button
-        android:id="@+id/pickTime"
+        android:id="@+id/pickTimeEdit"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
@@ -187,34 +187,33 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="16dp"
+        android:background="@color/white"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/addButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTime"
-        android:background="@color/white"
-        android:hint="Notes"
         android:paddingLeft="12dp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
+        android:text="Notes"
         android:textColor="@color/black"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/submitButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTime" />
 
     <Button
-        android:id="@+id/addButton"
+        android:id="@+id/submitButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
-        android:layout_marginBottom="32dp"
-        android:backgroundTint="@color/appTheme"
-        android:text="Add"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:text="Submit"
+        app:layout_constraintBottom_toTopOf="@+id/deleteEntryButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cancelButton" />
 
@@ -224,10 +223,24 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="8dp"
         android:text="Cancel"
+        app:layout_constraintBottom_toTopOf="@+id/deleteEntryButton"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/deleteEntryButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="16dp"
+        android:text="Delete Entry"
+        android:backgroundTint="#FF6A6A"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:backgroundTint="#B84747" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
