--- a/app/src/main/res/drawable/exp_save_btn_toggle.xml
+++ b/app/src/main/res/drawable/exp_save_btn_toggle.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="false" android:color="#B55C5C"  />
-    <item android:state_checked="true" android:color="#5CB56E"  />
+    <item android:state_checked="false" android:drawable="@drawable/ic_baseline_add_box_saving" />
+    <item android:state_checked="true" android:drawable="@drawable/ic_baseline_indeterminate_check_box_expense"  />
 </selector>
