--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -8,17 +8,17 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="60dp"
         android:background="#DDDDDD"
         android:layout_alignParentTop="true"
 />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="15dp"
+        android:layout_height="10dp"
         android:background="#DDDDDD"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="420dp"
+        android:layout_marginTop="390dp"
         />
 
     <ViewFlipper
@@ -34,7 +34,7 @@
             android:layout_height="300dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="70dp"
             android:layout_alignParentLeft="true" />
 
         <com.github.mikephil.charting.charts.LineChart
@@ -43,7 +43,7 @@
             android:layout_height="300dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="70dp"
             android:layout_alignParentLeft="true" />
 
     </ViewFlipper>
@@ -51,25 +51,37 @@
     <Button
         android:id="@+id/weekly"
         android:layout_width="120dp"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="14dp"
-        android:backgroundTint="@color/apptheme"
+        android:layout_marginTop="7dp"
+        android:backgroundTint="@color/appTheme"
         android:text="Weekly"
         />
 
     <Button
         android:id="@+id/monthly"
         android:layout_width="120dp"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
         android:layout_alignParentRight="true"
         android:layout_marginRight="30dp"
-        android:layout_marginTop="14dp"
-        android:backgroundTint="@color/apptheme"
+        android:layout_marginTop="7dp"
+        android:backgroundTint="@color/appTheme"
         android:text="Monthly"
         />
+
+    <Button
+        android:id="@+id/save_exp"
+        android:layout_width="40dp"
+        android:layout_height="45dp"
+        android:layout_centerVertical="true"
+        android:layout_centerInParent="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="7dp"
+        android:backgroundTint="#919191"
+        />
+
     <TextView
         android:id="@+id/total_expense"
         android:layout_width="180dp"
@@ -77,19 +89,18 @@
         android:text="Total Expenditures"
         android:textSize="8pt"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="200dp"
+        android:layout_marginBottom="240dp"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="20dp"
         />
 
     <TextView
         android:id="@+id/expense_num"
-        android:layout_width="90dp"
+        android:layout_width="100dp"
         android:layout_height="30dp"
-        android:text="-$95.62"
         android:textSize="8pt"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="180dp"
+        android:layout_marginBottom="220dp"
         android:layout_alignParentRight="true"
         android:layout_marginLeft="20dp"
         android:textColor="#FF3D3D"
@@ -102,22 +113,21 @@
         android:text="Total Savings"
         android:textSize="8pt"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="120dp"
+        android:layout_marginBottom="160dp"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="20dp"
         />
 
     <TextView
         android:id="@+id/save_num"
-        android:layout_width="90dp"
+        android:layout_width="100dp"
         android:layout_height="30dp"
-        android:text="+$18.50"
         android:textSize="8pt"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="140dp"
         android:layout_alignParentRight="true"
         android:layout_marginLeft="20dp"
-        android:textColor="@color/apptheme"
+        android:textColor="@color/appTheme"
         />
 
     <TextView
@@ -127,19 +137,18 @@
         android:text="Net Balance"
         android:textSize="8pt"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="80dp"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="20dp"
         />
 
     <TextView
         android:id="@+id/net_num"
-        android:layout_width="90dp"
+        android:layout_width="100dp"
         android:layout_height="30dp"
-        android:text="-$77.12"
         android:textSize="8pt"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="60dp"
         android:layout_alignParentRight="true"
         android:layout_marginLeft="20dp"
         android:textColor="#FF3D3D"
@@ -152,7 +161,7 @@
     android:text="this week:"
     android:textSize="6pt"
     android:layout_alignParentBottom="true"
-    android:layout_marginBottom="170dp"
+    android:layout_marginBottom="210dp"
     android:layout_alignParentLeft="true"
     android:layout_marginLeft="20dp"
     />
@@ -164,7 +173,7 @@
         android:text="this week:"
         android:textSize="6pt"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="90dp"
+        android:layout_marginBottom="130dp"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="20dp"
         />
@@ -176,10 +185,19 @@
         android:text="this week:"
         android:textSize="6pt"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="50dp"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="20dp"
         />
+
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/appTheme"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/bottom_nav_menu" />
 
 
 
