--- a/app/src/main/res/layout/expenses_list_items.xml
+++ b/app/src/main/res/layout/expenses_list_items.xml
@@ -20,6 +20,19 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/entryStore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="4dp"
+        android:text="Store"
+        android:textSize="16dp"
+        android:textColor="@color/teal_700"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/entryTitle" />
+
+    <TextView
         android:id="@+id/entryNotes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -29,7 +42,7 @@
         android:text="Notes"
         android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/entryTitle" />
+        app:layout_constraintTop_toBottomOf="@id/entryStore" />
 
     <TextView
         android:id="@+id/entryDate"
@@ -38,39 +51,77 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
-        android:text="Date and Time"
+        android:text="Date"
         android:textColor="#333333"
         android:textSize="16dp"
-        app:layout_constraintBottom_toTopOf="@id/divider"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/entryNotes" />
+
+    <TextView
+        android:id="@+id/at"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="8dp"
+        android:text="at"
+        android:textColor="#333333"
+        android:textSize="16dp"
+        app:layout_constraintStart_toEndOf="@+id/entryDate"
+        app:layout_constraintTop_toBottomOf="@+id/entryNotes" />
+
+    <TextView
+        android:id="@+id/entryTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="8dp"
+        android:text="Time"
+        android:textColor="#333333"
+        android:textSize="16dp"
+        app:layout_constraintStart_toEndOf="@+id/at"
+        app:layout_constraintTop_toBottomOf="@+id/entryNotes" />
 
     <TextView
         android:id="@+id/entryValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginRight="6dp"
+        android:text="Value"
+        android:textColor="#333333"
+        android:textSize="18dp"
+        app:layout_constraintEnd_toStartOf="@id/entryCurrency"
+
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/entryCurrency"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:text="Value"
+        android:text="EGP"
+        android:textColor="#333333"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textColor="#333333"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/entryMethodPay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
         android:text="Method"
+        android:textColor="#333333"
         android:textSize="16dp"
-        app:layout_constraintBottom_toTopOf="@id/divider"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textColor="#333333"/>
+        app:layout_constraintTop_toBottomOf="@+id/entryCurrency" />
 
     <View
         android:id="@+id/divider"
@@ -78,6 +129,6 @@
         android:layout_height="1dp"
         android:layout_marginTop="16dp"
         android:background="?android:attr/listDivider"
-        app:layout_constraintTop_toBottomOf="@id/entryDate" />
+        app:layout_constraintTop_toBottomOf="@+id/entryTime" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
